--- a/_data/apis.yaml
+++ b/_data/apis.yaml
@@ -1,54 +1,45 @@
-name: API Evangelist
-description: These are my APIs for my API industry research, studying over 70 areas along an API life cycle.
+name: API Evangelist - Search
+description: This is my research into API search, as part of API Evangelist industry monitoring.
 image: http://s3.amazonaws.com/kinlane-productions/api-evangelist/t-shirts/KL_InApiWeTrust-1000.png
 tags:
   - API
-  - Integrations
-created: "2017-05-09"
-modified: "2017-05-09"
-url: https://apievangelist.com/apis.json
+  - Search
+created: "2017-06-24"
+modified: "2017-06-30"
+url: https://search.apievangelist.com/apis.json
 specificationVersion: "0.14"
 apis:
-  - name: Products API
-    description: This is my simple API for managing my products.
-    image: http://apievangelist.com/images/product-square.png
-    humanURL: http://apievangelist.com/
-    baseURL: http://apievangelist.com/
+  - name: Blog API
+    description: This is my simple API for accessing blog posts as part of this research.
+    image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png
+    humanURL: http://search.apievangelist.com/
+    baseURL: http://search.apievangelist.com/
     tags:
-      - API Evangelist
-      - Products
+      - Blog
     properties:
       - type: x-openapi
-        url: http://apievangelist.com/apis/products/openapi.json
-  - name: Services API
-    description: This is my simple API for managing my services.
-    image: http://apievangelist.com/images/services-square.png
-    humanURL: http://apievangelist.com/
-    baseURL: http://apievangelist.com/
+        url: http://search.apievangelist.com/apis/blogs/openapi.json
+      - type: x-atom
+        url: http://search.apievangelist.com/feeds/blogs/atom.xml
+  - name: News API
+    description: This is my simple API for accessing news stories I've curated as part of this research.
+    image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-news-icon.png
+    humanURL: http://search.apievangelist.com/
+    baseURL: http://search.apievangelist.com/
     tags:
-      - API Evangelist
-      - Services
+      - News
     properties:
       - type: x-openapi
-        url: http://apievangelist.com/apis/services/openapi.json
-  - name: Partners API
-    description: This is my simple API for managing my partners across the sites.
-    image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-partner.png
-    humanURL: http://apievangelist.com/
-    baseURL: http://apievangelist.com/
-    tags:
-      - API Evangelist
-      - Partners
-    properties:
-      - type: x-openapi
-        url: http://apievangelist.com/apis/partners/openapi.json
+        url: http://search.apievangelist.com/apis/curated/openapi.json
+      - type: x-atom
+        url: http://search.apievangelist.com/feeds/news/atom.xml
 x-common:
   - type: x-support
-    url: https://github.com/kinlane/api-evangelist/issues
+    url: https://github.com/api-evangelist/search/issues
   - type: x-documentation
-    url: http://apievangelist.com/documentation/
+    url: http://search.apievangelist.com/documentation/
   - type: x-github-repo
-    url: https://github.com/kinlane/api-evangelist
+    url: https://github.com/api-evangelist/search
 include: []
 maintainers:
   - FN: Kin Lane
